--- a/FondosPantalla/fondo/templates/fondo.html
+++ b/FondosPantalla/fondo/templates/fondo.html
@@ -5,7 +5,7 @@
 
 <div id="container">
     <a>Título: {{ titulo }}</a><br>
-    <img src="imgs/download/{{ imagen }}" width="500" height="500">
+    <img src="../imgs/download/{{ imagen }}" width="1366" height="768">
 </div>
 
 <div>
