--- a/FondosPantalla/fondo/templates/principal.html
+++ b/FondosPantalla/fondo/templates/principal.html
@@ -7,6 +7,7 @@
     <tr>
       <th scope="col">#</th>
       <th scope="col">Titulo</th>
+      <th scope="col">Precio</th>
       <th scope="col">Fondo</th>
     </tr>
   </thead>
@@ -15,11 +16,12 @@
   <tr>
       <th scope="row"> {{ fondo.id }}</th>
       <th scope="row"> {{ fondo.titulo }}</th>
+      <th scope="row"> {{ fondo.precio }}</th>
     <td>
       {% if fondo.imagen %}
-      <a href="{% url 'fondo' fondo.id %}">
-        <img src="imgs/preview/{{ fondo.imagen.name }}" width="100" height="100">
-      </a>
+        <a href="{% url 'fondo' fondo.id %}">
+          <img src="imgs/{{ fondo.imagen.name }}" width="136" height="76">
+        </a>
       {% endif %}
     </td>
   </tr>
