--- a/FondosPantalla/fondo/templates/fondo.html
+++ b/FondosPantalla/fondo/templates/fondo.html
@@ -1,7 +1,7 @@
 {% extends 'inicio.html' %}
 
 {% block content %}
-<form action="{% url 'descargar' %}" method="POST" enctype="multipart/form-data">
+<form action="#" method="POST" enctype="multipart/form-data">
 {% csrf_token %}
 <div id="container">
     <a>Título: {{ titulo }}</a><br>
@@ -13,8 +13,8 @@
      <a>Precio: {{ precio }}</a><br><br>
 
 </div>
-<button type="submit" class="btn btn-primary">Descargar</button>
-    <a class="btn btn-dark" href="{% url 'listar' %}">Cancelar</a>
+    <a class="btn btn-primary"  href="../imgs/download/{{ imagen }}" target="_blank">Descargar</a>
+    <a class="btn btn-dark" href="{% url 'listar' %}">Cancelar</a><br><br>
 </form>
 
 {% endblock %}
